--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <p> Hi this is Pooja Hallikhede</p>
+    <p> Hi this is Pooja git</p>
 </body>
 </html>
